<resources>
    <string name="app_name">DroHealthTest</string>
    <string name="bag">Bag</string>
    <string name="database_name">dro_health_store</string>
    <string name="search_hint">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="pack_s">Pack(s)</string>
    <string name="drug_icon">Drug Icon</string>
    <string name="back_button">Back button</string>
    <string name="product_details">Product details</string>
    <string name="pack_size">pack size</string>
    <string name="drug_pack_info">%d pack of %s contains 3 unit(s) of 10 Tablet(s)</string>
    <string name="product_id">product id</string>
    <string name="constituents">constituents</string>
    <string name="dispensed_in">dispensed in</string>
    <string name="packs">Packs</string>
    <string name="try_again">Try Again</string>
    <string name="done">Done</string>
    <string name="view_bag">View Bag</string>

</resources>