<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.esq.drohealthtest.utils.StringUtils" />

        <variable
            name="viewModel"
            type="com.esq.drohealthtest.ui.viewscreendetails.ViewDrugScreenViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grey_stroke_background"
        tools:context=".ui.viewscreendetails.ViewDrugScreenFragment">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="1.0"
            app:tint="@color/dro_purple"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_pill" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@android:drawable/ic_menu_delete"
            app:tint="@color/dro_purple" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:tint="@color/dro_purple"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_pill" />

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back_24"
            android:tint="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/purple_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_shopping_bag1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@{String.valueOf(viewModel.numberOfItemsInBag)}"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/appCompatImageView4"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/drug_icon"
            app:imageUrl="@{viewModel.currentDrugShown.medicineIcon}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonBack"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@{viewModel.currentDrugShown.mainName, default= GarlicOil}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButtonBack"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@{viewModel.currentDrugShown.medicineTypeName, default=SoftGel}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView3"
            app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@color/light_grey_color"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="Sold by"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/grey_color"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Emzor Pharmaceuticals"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/grey_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/grey_stroke_background"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <ImageButton
                android:id="@+id/imageButtonRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="@{viewModel::onRemovePackClicked}"
                app:srcCompat="@drawable/ic_baseline_remove_24" />

            <TextView
                android:id="@+id/textViewNoOfPacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@{String.valueOf(viewModel.noOfPacksChosen)}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="1" />

            <ImageButton
                android:id="@+id/imageButtonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="@{viewModel::onAddPackClicked}"
                app:srcCompat="@drawable/ic_baseline_add_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/pack_s"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
            app:layout_constraintStart_toEndOf="@+id/linearLayout4"
            app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{StringUtils.getPriceNumberToString(viewModel.totalPriceForDrug)}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/imageButton1"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:text="₦385" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_to_bag"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:icon="@drawable/ic_shopping_bag2"
            android:onClick="@{viewModel::onAddToBagClicked}"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton1"
            app:layout_constraintStart_toEndOf="@+id/imageButtonBack" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/product_details"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:tint="@color/dro_purple"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:srcCompat="@drawable/ic_pill" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.678">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pack_size"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="3x10"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.678">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/constituents"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.currentDrugShown.mainName, default= GarlicOil}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.678">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dispensed_in"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/packs"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageButton1"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.678">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/product_id"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="PROBRYVPW1"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center"
            android:text="@{@string/drug_pack_info(viewModel.noOfPacksChosen, viewModel.currentDrugShown.mainName)}"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>